--- a/AndroidKinect/res/layout/activity_kinect.xml
+++ b/AndroidKinect/res/layout/activity_kinect.xml
@@ -18,7 +18,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tv"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="14dp"
         android:text="Button" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="76dp" />
 
 </RelativeLayout>
