--- a/AndroidKinect/res/layout/activity_kinect.xml
+++ b/AndroidKinect/res/layout/activity_kinect.xml
@@ -21,20 +21,20 @@
         android:layout_below="@+id/tv"
         android:layout_marginTop="14dp"
         android:text="Button" />
-
+    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/button"
-        android:layout_marginTop="76dp" />
+        android:layout_height="wrap_content"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/imageView1" />
+        android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
